--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -4654,6 +4654,7 @@ div[id ^= "mini-panel-partner_in_"], {
 				width: 40%;
 				display: inline-block;
 			}
+			/*
 			input[type="file"] {
 				-webkit-appearance: none;
 				-moz-appearance: none;
@@ -4668,6 +4669,7 @@ div[id ^= "mini-panel-partner_in_"], {
 					cursor: pointer;
 				}
 			}
+			*/
 			button{
 				padding: 7px 15px;
 				vertical-align: top;
@@ -4747,6 +4749,7 @@ div[id ^= "mini-panel-partner_in_"], {
 					width: 40%;
 				}
 				.form-managed-file{
+					/*
 					input[type="file"] {
 						-webkit-appearance: none;
 						-moz-appearance: none;
@@ -4761,6 +4764,7 @@ div[id ^= "mini-panel-partner_in_"], {
 							cursor: pointer;
 						}
 					}
+					*/
 					.form-submit{
 						background-color: @color-see-more;
 						color: white;
