--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-992.less
@@ -1322,6 +1322,7 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 				width: 60%;
 				display: inline-block;
 			}
+			/*
 			input[type="file"] {
 			    -webkit-appearance: none;
 			    -moz-appearance: none;
@@ -1335,7 +1336,7 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 				    height: 25px;
 				    cursor: pointer;
 				}
-			}
+			}*/
 			button{
 				padding: 7px 15px;
 				vertical-align: top;
