css changes - NOW-449 compiling variables.less

--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -1,5 +1,4 @@
-@import url('//fonts.googleapis.com/css?family=Oswald:300,400,700&subset=latin,latin-ext');
-@import url('//fonts.googleapis.com/css?family=Roboto:700,400,700italic&subset=latin,greek,cyrillic,latin-ext');
+@import url('//fonts.googleapis.com/css?family=Oswald:300,400,700|Roboto:700,400,700italic&subset=latin,greek,cyrillic,latin-ext');
 /*ENDIKA - ASIER VARIABLES
 *********************************************/
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
