--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -2281,7 +2281,7 @@ a.more-link{
 		float: left;
 		margin-right: 30px;
 		margin-bottom: 20px;
-		width: 100%;
+		//width: 100%;
 		img{
 			border: 1px solid grey;
 		}
