--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -879,9 +879,12 @@ h1.page-header {
 	    margin-top: 20px;
 	}
 	.field-name-field-image{
-		width: 35%;
+		width: 100%;
 		margin-right: 15px !important;
 		margin-bottom: 7px !important;
+		img{
+			width: 100%;
+		}
 	}
 }
 /*END OIRA NEWS*/
