--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -4925,6 +4925,11 @@ div[id ^= "mini-panel-partner_in_"], {
 
 //update profile
 .partner-edit-form{
+	.group-right.col-sm-6{
+		.field-name-field-mission-statement{
+			visibility: hidden;
+		}
+	}
 	h2{
 		color: @color-text-purple-darker;
 		font-family: "Oswald";
@@ -5221,7 +5226,8 @@ div[id ^= "mini-panel-partner_in_"], {
 	padding-bottom: 0px;
 	margin-bottom: 5px;
 	#oira-strategic-documentation-eu-osha-form,
-	#oira-strategic-documentation-partners-form{
+	#oira-strategic-documentation-partners-form,
+	#oira-collaboration-items-form{
 		div:first-child{
 			.form-group{
 				margin-bottom: 0px;
@@ -5394,7 +5400,7 @@ div[id ^= "mini-panel-partner_in_"], {
 				}
 				.search-page-results-wrapper{
 					background-color: @color-white;
-					padding: 30px;
+					padding: 0px 30px;
 					.node-teaser{
 						border-top: 2px solid @color-primary-dark;
 						margin-left: 0px;
@@ -5421,6 +5427,50 @@ div[id ^= "mini-panel-partner_in_"], {
 						margin-left: 0px;
 						margin-right: 0px;
 						padding-top: 0px;	
+					}
+					.node-collaboration-document{
+						h2{
+							margin-top: 0px;
+						}
+						.field-collection-container{
+							border: none;
+							margin-bottom: 0px;
+							.field-collection-view{
+								margin: 0px;
+								padding: 0px;
+								.field-name-field-col-item-label{
+									font-weight: bolder;
+								}
+								.field-type-file{
+									a{
+										color: @color-menu;
+									    font-weight: bold;
+									    font-style: italic;
+									}
+								}
+								.field-type-link-field{
+									margin-top: 15px;
+									a{
+										color: @color-menu;
+										font-weight: bold;
+										font-style: italic;
+										text-decoration: none;
+										&:hover{
+											color: @color-text-purple;
+										}
+										&:before{
+											content: "\e164";
+											text-decoration: none;
+											font-style: normal;
+											margin-right: 5px;
+	    									color: @color-text-purple-darker;
+											font-family: "Glyphicons Halflings";
+											vertical-align: middle;
+										}
+									}
+								}
+							}
+						}
 					}
 					.node-strategic-documentation{
 						.field.field-name-field-country,
