css changes - updates security style changes

--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1241,10 +1241,9 @@ a.more-link{
 							}
 						}
 					}
-
 				}
 			}
-			#additional-resources-external_url-pane{
+			#additional-resources-external-url-pane{
 				h4{
 					&:after{
 						.section-icons("../images/icons/175.png");
@@ -1291,7 +1290,7 @@ a.more-link{
 			}
 		}
 
-		#additional-resources-external_url-pane{
+		#additional-resources-external-url-pane{
 			.view-additional-resources{
 				.views-item-columns-container{
 					padding: 15px !important;
@@ -2218,15 +2217,16 @@ a.more-link{
 .node-news{
 	margin-bottom: 30px;
 	.field-name-field-publication-date{
-		margin-top: 50px;
+		margin-top: 20px;
 		width: 50%;
 		display: inline-block;
 	}
 	.back-to-news{
 		width: 50%;
-		float: none !important;
+		//float: none !important;
 		display: inline-block;
 		text-align: right;
+		margin-top: 20px;
 		a{
 			color: @color-see-more;
 			&:after{
