--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -8269,6 +8269,18 @@ a.more-link:before {
   background: url('../images/background-two-colors.png') repeat-y 50%;
   padding-bottom: 0px;
 }
+.page-oira-tools .panels-flexible-row-last #hwc-practical-tool-menu-tools-form > div {
+  display: -webkit-box;
+  /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;
+  /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;
+  /* TWEENER - IE 10 */
+  display: -webkit-flex;
+  /* NEW - Chrome */
+  display: flex;
+  /* NEW, Spec - Opera 12.1, Firefox 20+ */
+}
 .page-oira-tools .panels-flexible-row-last #hwc-practical-tool-menu-tools-form div:first-child .form-group {
   margin-bottom: 0px;
 }
@@ -9916,6 +9928,18 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   padding-bottom: 0px;
   padding-top: 0px;
 }
+.page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form > div {
+  display: -webkit-box;
+  /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;
+  /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;
+  /* TWEENER - IE 10 */
+  display: -webkit-flex;
+  /* NEW - Chrome */
+  display: flex;
+  /* NEW, Spec - Opera 12.1, Firefox 20+ */
+}
 .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child .form-group {
   margin-bottom: 0px;
 }
@@ -10446,6 +10470,18 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   background: url('../images/background-two-colors.png') repeat-y 50%;
   padding-bottom: 0px;
   padding-top: 0px;
+}
+.page-search-site .oira-search-form-container #osha-search-search-form > div {
+  display: -webkit-box;
+  /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;
+  /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;
+  /* TWEENER - IE 10 */
+  display: -webkit-flex;
+  /* NEW - Chrome */
+  display: flex;
+  /* NEW, Spec - Opera 12.1, Firefox 20+ */
 }
 .page-search-site .oira-search-form-container #osha-search-search-form div:first-child .form-group {
   margin-bottom: 0px;
@@ -11862,6 +11898,19 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   padding-bottom: 0px;
   margin-bottom: 5px;
 }
+.oira-search-form-container #oira-strategic-documentation-eu-osha-form > div,
+.oira-search-form-container #oira-strategic-documentation-partners-form > div {
+  display: -webkit-box;
+  /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box;
+  /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox;
+  /* TWEENER - IE 10 */
+  display: -webkit-flex;
+  /* NEW - Chrome */
+  display: flex;
+  /* NEW, Spec - Opera 12.1, Firefox 20+ */
+}
 .oira-search-form-container #oira-strategic-documentation-eu-osha-form div:first-child .form-group,
 .oira-search-form-container #oira-strategic-documentation-partners-form div:first-child .form-group {
   margin-bottom: 0px;
@@ -12855,6 +12904,68 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
     background-color: #dfd8e4;
     padding-bottom: 0px;
   }
+  .page-oira-tools .panels-flexible-row-new-1 #osha-search-search-form > div,
+  .page-promotional-resources-search .panels-flexible-row-new-1 #osha-search-search-form > div,
+  .page-search-site .panels-flexible-row-new-1 #osha-search-search-form > div,
+  .page-private-zone-collaboration-area .panels-flexible-row-new-1 #osha-search-search-form > div,
+  .page-oira-tools .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #osha-search-search-form > div,
+  .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #osha-search-search-form > div,
+  .page-search-site .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #osha-search-search-form > div,
+  .page-private-zone-collaboration-area .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #osha-search-search-form > div,
+  .page-oira-tools .oira-search-form-container #osha-search-search-form > div,
+  .page-promotional-resources-search .oira-search-form-container #osha-search-search-form > div,
+  .page-search-site .oira-search-form-container #osha-search-search-form > div,
+  .page-private-zone-collaboration-area .oira-search-form-container #osha-search-search-form > div,
+  .page-oira-tools .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form > div,
+  .page-promotional-resources-search .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form > div,
+  .page-search-site .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form > div,
+  .page-private-zone-collaboration-area .panels-flexible-row-new-1 #hwc-practical-tool-menu-tools-form > div,
+  .page-oira-tools .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #hwc-practical-tool-menu-tools-form > div,
+  .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #hwc-practical-tool-menu-tools-form > div,
+  .page-search-site .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #hwc-practical-tool-menu-tools-form > div,
+  .page-private-zone-collaboration-area .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #hwc-practical-tool-menu-tools-form > div,
+  .page-oira-tools .oira-search-form-container #hwc-practical-tool-menu-tools-form > div,
+  .page-promotional-resources-search .oira-search-form-container #hwc-practical-tool-menu-tools-form > div,
+  .page-search-site .oira-search-form-container #hwc-practical-tool-menu-tools-form > div,
+  .page-private-zone-collaboration-area .oira-search-form-container #hwc-practical-tool-menu-tools-form > div,
+  .page-oira-tools .panels-flexible-row-new-1 #oira-promotional-material-search-form > div,
+  .page-promotional-resources-search .panels-flexible-row-new-1 #oira-promotional-material-search-form > div,
+  .page-search-site .panels-flexible-row-new-1 #oira-promotional-material-search-form > div,
+  .page-private-zone-collaboration-area .panels-flexible-row-new-1 #oira-promotional-material-search-form > div,
+  .page-oira-tools .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form > div,
+  .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form > div,
+  .page-search-site .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form > div,
+  .page-private-zone-collaboration-area .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form > div,
+  .page-oira-tools .oira-search-form-container #oira-promotional-material-search-form > div,
+  .page-promotional-resources-search .oira-search-form-container #oira-promotional-material-search-form > div,
+  .page-search-site .oira-search-form-container #oira-promotional-material-search-form > div,
+  .page-private-zone-collaboration-area .oira-search-form-container #oira-promotional-material-search-form > div,
+  .page-oira-tools .panels-flexible-row-new-1 #oira-strategic-documentation-eu-osha-form > div,
+  .page-promotional-resources-search .panels-flexible-row-new-1 #oira-strategic-documentation-eu-osha-form > div,
+  .page-search-site .panels-flexible-row-new-1 #oira-strategic-documentation-eu-osha-form > div,
+  .page-private-zone-collaboration-area .panels-flexible-row-new-1 #oira-strategic-documentation-eu-osha-form > div,
+  .page-oira-tools .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-strategic-documentation-eu-osha-form > div,
+  .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-strategic-documentation-eu-osha-form > div,
+  .page-search-site .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-strategic-documentation-eu-osha-form > div,
+  .page-private-zone-collaboration-area .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-strategic-documentation-eu-osha-form > div,
+  .page-oira-tools .oira-search-form-container #oira-strategic-documentation-eu-osha-form > div,
+  .page-promotional-resources-search .oira-search-form-container #oira-strategic-documentation-eu-osha-form > div,
+  .page-search-site .oira-search-form-container #oira-strategic-documentation-eu-osha-form > div,
+  .page-private-zone-collaboration-area .oira-search-form-container #oira-strategic-documentation-eu-osha-form > div,
+  .page-oira-tools .panels-flexible-row-new-1 #oira-strategic-documentation-partners-form > div,
+  .page-promotional-resources-search .panels-flexible-row-new-1 #oira-strategic-documentation-partners-form > div,
+  .page-search-site .panels-flexible-row-new-1 #oira-strategic-documentation-partners-form > div,
+  .page-private-zone-collaboration-area .panels-flexible-row-new-1 #oira-strategic-documentation-partners-form > div,
+  .page-oira-tools .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-strategic-documentation-partners-form > div,
+  .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-strategic-documentation-partners-form > div,
+  .page-search-site .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-strategic-documentation-partners-form > div,
+  .page-private-zone-collaboration-area .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-strategic-documentation-partners-form > div,
+  .page-oira-tools .oira-search-form-container #oira-strategic-documentation-partners-form > div,
+  .page-promotional-resources-search .oira-search-form-container #oira-strategic-documentation-partners-form > div,
+  .page-search-site .oira-search-form-container #oira-strategic-documentation-partners-form > div,
+  .page-private-zone-collaboration-area .oira-search-form-container #oira-strategic-documentation-partners-form > div {
+    display: block !important;
+  }
   .page-oira-tools .panels-flexible-row-new-1 #edit-left-column,
   .page-promotional-resources-search .panels-flexible-row-new-1 #edit-left-column,
   .page-search-site .panels-flexible-row-new-1 #edit-left-column,
@@ -13004,6 +13115,7 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   .page-private-zone-collaboration-area .oira-search-form-container #edit-content .toggle-search-sidebar {
     position: absolute;
     top: 20px;
+    left: 15px;
   }
   .page-oira-tools .panels-flexible-row-new-1 #edit-content .toggle-search-sidebar span,
   .page-promotional-resources-search .panels-flexible-row-new-1 #edit-content .toggle-search-sidebar span,
@@ -13047,6 +13159,9 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   /*END OIRA TOOLS, PROMOTIONAL RESOURCES, GENERAL SEARCH (FILTERS)*/
   /*OIRA TOOLS
 **************************************/
+  .page-oira-tools #hwc-practical-tool-menu-tools-form > div {
+    display: block !important;
+  }
   .page-oira-tools #hwc-practical-tool-menu-tools-form div:first-child #edit-content .search-page-results-wrapper .node-practical-tool .field-name-tools-see-more {
     margin-left: 180px !important;
   }
@@ -13058,6 +13173,9 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
 ***************************************************/
   .promotional-introduction-item {
     min-height: 475px;
+  }
+  .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form > div {
+    display: block !important;
   }
   .page-promotional-resources-search .panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last #oira-promotional-material-search-form div:first-child #edit-content .search-page-results-wrapper .node-promotional-material .field-name-tools-see-more a.more-link {
     margin-left: 166px !important;
