--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1540,6 +1540,13 @@ a.more-link{
 		background: url('../images/background-two-colors.png') repeat-y 50%;
 		padding-bottom: 0px;
 		#hwc-practical-tool-menu-tools-form{
+			>div{
+				display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+				display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+				display: -ms-flexbox;      /* TWEENER - IE 10 */
+				display: -webkit-flex;     /* NEW - Chrome */
+				display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+			}
 			div:first-child{
 				.form-group{
 					margin-bottom: 0px;
@@ -3188,6 +3195,13 @@ div[id ^= "mini-panel-partner_in_"], {
 		padding-bottom: 0px;
 		padding-top: 0px;
 		#oira-promotional-material-search-form{
+			>div{
+				display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+				display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+				display: -ms-flexbox;      /* TWEENER - IE 10 */
+				display: -webkit-flex;     /* NEW - Chrome */
+				display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+			}
 			div:first-child{
 				.form-group{
 					margin-bottom: 0px;
@@ -3746,6 +3760,13 @@ div[id ^= "mini-panel-partner_in_"], {
 		padding-bottom: 0px;
 		padding-top: 0px;
 		#osha-search-search-form{
+			>div{
+				display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+				display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+				display: -ms-flexbox;      /* TWEENER - IE 10 */
+				display: -webkit-flex;     /* NEW - Chrome */
+				display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+			}
 			div:first-child{
 				.form-group{
 					margin-bottom: 0px;
@@ -5210,6 +5231,13 @@ div[id ^= "mini-panel-partner_in_"], {
 	margin-bottom: 5px;
 	#oira-strategic-documentation-eu-osha-form,
 	#oira-strategic-documentation-partners-form{
+		>div{
+				display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
+				display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
+				display: -ms-flexbox;      /* TWEENER - IE 10 */
+				display: -webkit-flex;     /* NEW - Chrome */
+				display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+			}
 		div:first-child{
 			.form-group{
 				margin-bottom: 0px;
