css changes - removed comments of language select and login

--- a/docroot/sites/all/themes/oira_frontend/css/style.css
+++ b/docroot/sites/all/themes/oira_frontend/css/style.css
@@ -6689,7 +6689,6 @@ button.close {
   display: inline-block;
   margin-right: 10px;
   max-width: 100px;
-  visibility: hidden;
 }
 .top-header .header-blocks #block-menu-block-3 .introduction-title a {
   display: block;
@@ -6710,7 +6709,6 @@ button.close {
 .top-header .header-blocks #block-lang-dropdown-language {
   display: inline-block;
   float: right;
-  visibility: hidden;
 }
 .top-header .header-blocks #block-lang-dropdown-language #lang-dropdown-select-language {
   border: 2px solid #003399;
@@ -11889,7 +11887,8 @@ div[id^="mini-panel-partner_in_"] .partner-text2-container a:hover {
   margin-bottom: 5px;
 }
 .oira-search-form-container #oira-strategic-documentation-eu-osha-form > div,
-.oira-search-form-container #oira-strategic-documentation-partners-form > div {
+.oira-search-form-container #oira-strategic-documentation-partners-form > div,
+.oira-search-form-container #oira-collaboration-items-form > div {
   display: -webkit-box;
   /* OLD - iOS 6-, Safari 3.1-6 */
   display: -moz-box;
