--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -1965,6 +1965,14 @@ a.more-link{
 				border-radius: 0;
 				border: none;
 				width: 100%;
+				.panel-body{
+					padding: 0px;
+					.help-block{
+						color: white;
+						font-size: .9em;
+    					opacity: .8;
+					}
+				}
 				legend{
 					display: none;
 				}
@@ -2024,7 +2032,7 @@ a.more-link{
 			}
 			button.form-submit{
 				position: absolute;
-				bottom: 15px;
+				bottom: 62px;
 				left: 235px;
 				border-radius: 0px;
 				background-color: white;
