--- a/docroot/sites/all/themes/oira_frontend/less/content.less
+++ b/docroot/sites/all/themes/oira_frontend/less/content.less
@@ -273,7 +273,7 @@ a.more-link{
 }
 
 .field-name-field-publication-date, .field-type-datetime{
-	margin-bottom: 15px;
+	margin-bottom: 0px;
 	color: @color-text-purple;
 	.date-display-single{
 		font-weight: bold;
@@ -1536,7 +1536,7 @@ a.more-link{
 		}
 	}
 	.panels-flexible-row-last{
-		background: url('../images/background-two-colors.png') repeat-y 50%;
+		background: url('../images/background-two-colors.jpg') repeat-y 50%;
 		padding-bottom: 0px;
 		#hwc-practical-tool-menu-tools-form{
 			>div{
@@ -3195,7 +3195,7 @@ div[id ^= "mini-panel-partner_in_"], {
 		}
 	}
 	.panels-flexible-row-page-promotional-materials-search.panels-flexible-row-last{
-		background: url('../images/background-two-colors.png') repeat-y 50%;
+		background: url('../images/background-two-colors.jpg') repeat-y 50%;
 		padding-bottom: 0px;
 		padding-top: 0px;
 		#oira-promotional-material-search-form{
@@ -3760,7 +3760,7 @@ div[id ^= "mini-panel-partner_in_"], {
 //general search styles
 .page-search-site{
 	.oira-search-form-container{
-		background: url('../images/background-two-colors.png') repeat-y 50%;
+		background: url('../images/background-two-colors.jpg') repeat-y 50%;
 		padding-bottom: 0px;
 		padding-top: 0px;
 		#osha-search-search-form{
@@ -4585,7 +4585,8 @@ div[id ^= "mini-panel-partner_in_"], {
 
 .page-private-zone,
 .page-node-add,
-.page-node-update-profile{
+.page-node-update-profile,
+.page-node-view-profile{
 	.block-menu-block > .container{
 		position: relative;
 		.private-zone-back-link,
@@ -4739,6 +4740,9 @@ div[id ^= "mini-panel-partner_in_"], {
 			display: block;
 			float: none;
 			clear: both;
+			.input-group{
+				display: inherit;
+			}
 			.form-file{
 				width: 40%;
 				display: inline-block;
@@ -4865,6 +4869,9 @@ div[id ^= "mini-panel-partner_in_"], {
 				}
 				.help-block{
 					color: white;
+					a{
+						color: white;
+					}
 				}
 				.file-upload-js-error{
 					color: rgba(255,255,255, 0.7);
@@ -4900,6 +4907,9 @@ div[id ^= "mini-panel-partner_in_"], {
 		&:before{
 			content: "> ";
 		}
+		.glyphicon-ok{
+			display: none;
+		}
 	}
 	button#edit-delete,
 	button#edit-delete--2{
@@ -4930,6 +4940,12 @@ div[id ^= "mini-panel-partner_in_"], {
 //add promotional materials
 .page-node-add-promotional-material,
 .page-node-add-strategic-documentation{
+	label[for="edit-field-publication-date-und-0-value"]{
+		display: none;
+	}
+	label[for="edit-field-revised-date-und-0-value"]{
+		display: none;
+	}
 	.form-item-field-publication-date-und-0-value-hour,
 	.form-item-field-publication-date-und-0-value-minute{
 		display: none;
@@ -5247,7 +5263,7 @@ div[id ^= "mini-panel-partner_in_"], {
 
 //list of search
 .oira-search-form-container{
-	background: url('../images/background-two-colors.png') repeat-y 50%;
+	background: url('../images/background-two-colors.jpg') repeat-y 50%;
 	padding-bottom: 0px;
 	margin-bottom: 5px;
 	#oira-strategic-documentation-eu-osha-form,
@@ -5600,5 +5616,9 @@ div[id ^= "mini-panel-partner_in_"], {
 			}
 		}
 	}
+}
+
+.popover-content{
+	padding: 10px 30px !important;
 }
 /*End private zone*/
