--- a/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
+++ b/docroot/sites/all/themes/oira_frontend/less/responsive-max-767.less
@@ -2067,7 +2067,9 @@ div[id*="quicktabs-container-view__country_partner_content__block"]{
 	}
 
 }
-
+.partner-edit-form .group-right.col-sm-6 .field-name-field-mission-statement{
+	display: none;
+}
 /*End private zone*/
 
 /*general search styles
